# gingopy

./: 404.html  ALGORITHM_NOTES.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  generate_audio.py  generate_svgs.py  index.html  mkdocs.yml  pyproject.toml  roadmap.md  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/referencia/: index.html
bindings/: pybind_module.cpp
cpp/include/gingo/: chord.hpp  duration.hpp  event.hpp  expression_state.hpp  field.hpp  fretboard.hpp  fretboard_svg.hpp  gingo.hpp  harmonic_function.hpp  interval.hpp  midi1.hpp  midi2.hpp  midici_handler.hpp  monitor.hpp  musicxml.hpp  note.hpp  note_context.hpp  piano.hpp  piano_svg.hpp  progression.hpp  scale.hpp  sequence.hpp  tempo.hpp  time_signature.hpp  tree.hpp
cpp/include/gingo/internal/: data_ops.hpp  lookup_data.hpp  lookup_progression.hpp  lookup_tree.hpp  midi_format.hpp  mode_data.hpp  notation_utils.hpp  table.hpp  types.hpp
cpp/src/: chord.cpp  duration.cpp  event.cpp  field.cpp  fretboard.cpp  fretboard_svg.cpp  interval.cpp  midi1.cpp  midi2.cpp  midi_format.cpp  midici_handler.cpp  monitor.cpp  musicxml.cpp  note.cpp  piano.cpp  piano_svg.cpp  progression.cpp  scale.cpp  sequence.cpp  sequence_midi.cpp  tempo.cpp  time_signature.cpp  tree.cpp
cpp/src/internal/: data_ops.cpp  lookup_data.cpp  lookup_progression.cpp  lookup_tree.cpp  mode_data.cpp  notation_utils.cpp
docs/: index.md  referencias.md  roadmap.md
docs/api/: referencia.md
docs/guia/: audio.md  comecando.md  conceitos-basicos.md  exemplos-praticos.md  fretboard.md  instalacao.md  introducao.md  primeiros-passos.md  ritmo.md
guia/audio/: index.html
guia/comecando/: index.html
guia/conceitos-basicos/: index.html
guia/exemplos-praticos/: index.html
guia/fretboard/: index.html
guia/instalacao/: index.html
guia/introducao/: index.html
guia/primeiros-passos/: index.html
guia/ritmo/: index.html
python/gingo/: __init__.py  __init__.pyi  __main__.py  audio.py
referencias/: index.html
roadmap/: index.html
search/: search_index.json
tests/cpp/: CMakeLists.txt  test_chord.cpp  test_compare.cpp  test_field.cpp  test_fretboard.cpp  test_fretboard_svg.cpp  test_interval.cpp  test_midi.cpp  test_musicxml.cpp  test_note.cpp  test_piano.cpp  test_piano_svg.cpp  test_progression.cpp  test_rhythm.cpp  test_scale.cpp  test_tree.cpp
tests/python/: conftest.py  test_audio.py  test_chord.py  test_compare.py  test_field.py  test_fretboard.py  test_fretboard_svg.py  test_midi.py  test_musicxml.py  test_note.py  test_piano.py  test_piano_svg.py  test_progression.py  test_pythonic.py  test_rhythm.py  test_scale.py  test_tree.py
